e2 client: fix status overlap

--- a/static/client/app.css
+++ b/static/client/app.css
@@ -16,7 +16,7 @@ button {
     padding: 0px;
 
     /* space for bottom status */
-    margin-bottom: 2em;
+    margin-bottom: 3em;
 }
 
 #header {
